# Splash

./: .gitignore  .travis.yml  Cargo.toml  LICENCE  README.md  build.rs  test2.sh
src/: builtin.rs  env.rs  eval.rs  expand.rs  file.rs  interpolate.rs  job.rs  lexer.rs  logger.rs  main.rs  options.rs  parser.rs  pattern.rs  process.rs  prompt.rs  readline.rs  signals.rs  state.rs  test_fixture.rs  tests.rs  tokenizer.rs  util.rs
src/bindings/: mod.rs  nix.rs  readline.rs
src/expression/: ast.rs  eval.rs  mod.rs  parser.rs
src/input/: ast.rs  interpolate.rs  mod.rs  parser.rs  prompt.rs  token.rs  tokenizer.rs
tests/: lib.rs  process_tests.rs
