[package]

license = "GPL-3.0"
name = "splash"
readme = "README"
version = "0.0.1"

links = "readline"
build = "build.rs"

[profile.dev]
debug = true

[profile.test]
debug = true

[dependencies]
combine = "^1.2"
getopts = "^0.2"
lazy_static = "^0.1.15"
libc = { git = "https://github.com/rust-lang/libc" }
nix = "^0.7.0"
tempfile = "2.1.1"
