[package]

license = "GPL-3.0"
name = "splash"
readme = "README"
version = "0.0.1"

links = "readline"

[profile.dev]
debug = true

[profile.test]
debug = true

[dependencies]
log = "^0.3.7"
combine = "^2.3"
getopts = "^0.2.4"
lazy_static = "^0.2.8"
libc = "0.2.22"
nix = "^0.8.1"
tempfile = "^2.1.5"
